--- a/index.html
+++ b/index.html
@@ -4,9 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Donate For Hereafter</title> <link rel="stylesheet" href="style.css">
+    <title>Donate For Hereafter</title>
+                    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <h1>bhai</h1>
+    <section class="bigimage">
+    <div class="donation">
+ <div id="content">
+
+    <h1>"There is more happiness in,<span id="giving"> Giving</span> than in Receiving".</h1></div>
+    <br>
+   <div id="firstpara"><p>TO DONATE CLICK DOWN THE BUTTON BELOW.</p></div> 
+
+<
+    <a class="button" target="_blank" href="https://assunnahfoundation.org/donation">DONATE NOW</a>
+
+</div>
+    </section>
+    <br>
+<section class="money">
+ 
+    <div class="donate">
+        <h1>DONATE TODAY.</h1>
+        <p> <b>The Prophet Muhammad (Peace Be Upon Him) said,</b> “Charity does not reduce wealth. “ [Muslim]"</p>
+
+        <p id="afford"><strong>Donate the amount you can afford</strong> .</p>
+    </div>
+</section>
+<br>
+<section class="other">
+<div class="number">
+
+<div id="five"> <p> 5$</p> </div>
+<div id="ten">  <p>10$</p> </div>
+<div id="twenty"> <p>20$</p> </div>
+<div id="fifty"> <p> 50$</p> </div>
+
+
+</div>
+</section>
+
+<section>
+   <font> <input type="number" placeholder="Enter Amount"></font>
+   
+
+
+
+</section>
+
+
+
+
 </body>
+
+
+
+
+
 </html>
