--- a/index.html
+++ b/index.html
@@ -44,14 +44,34 @@
 
 </div>
 </section>
+<br>
+<form>
 
-<section>
-   <font> <input type="number" placeholder="Enter Amount"></font>
-   
+    <input type="number" placeholder="Enter Amount">
 
 
+</form>
+<br>
+<section id="buttontwo">
+
+
+<div id="button-two">
+    <a class="button-two" target="_blank" href="https://assunnahfoundation.org/donation">DONATE NOW</a>
+</div>
 
 </section>
+
+<br>
+
+<section class="money">
+
+<div id="threeplan">
+<h1> Our Donation Funds</h1>
+<p>Our donation funds goes to different sections. To mention top 3 section are food, clothe medicine.</p>
+
+</div>
+
+<div id="imgone"><img src="" alt="" srcset=""></div>
 
 
 
