--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
 </section>
 <br> 
-<div class="our"><h1>Our Funds For Donation</h1>
-    <p>Our fund divided for section of people. To mention top three are food, clothes, medicine.</p>
+<div class="our"><h1>Our Funds For Donation.</h1>
+    <p>Our funds are divided into different sections for people. To mention top three are food, clothes, medicine.</p>
     </div>
 
 
@@ -117,14 +117,38 @@
 </div>
 </section>
 
-<section class="email">
 
-<div class="updates"> <h1>Get Our Updates</h1>
+   
+<div class="updates"> <h1>Get Our Updates</h1> 
+
 <p> Enter your email address and know about our latest updates.</p></div>
 
-</section>
+
+<div class="box">
+<form action="#">
+    <div class="formbox"><input type="email" class="email" placeholder="Email Adress">
+    <button type="Subscribe">Subscribe</button></div>
+</form>
+</div>
+
+
+
+
+
 </body>
-
-
+<footer>
+    <div class='container'>
+    <div class='row'>
+        <div class='col-md-12'>
+            <ul>
+             
+                <p>  Be <span id="humble">Humble</span></p>
+                <p>Spread Love</p>
+                <p>&copy; Copyright 2022</p>
+            </ul>
+        </div>
+    </div>
+    </div>
+</footer>
 
 </html>
